--- a/index.html
+++ b/index.html
@@ -206,19 +206,58 @@
     <!-- fin de tarjetas de la empresa -->
 
     <!-- inicio de productos -->
-    <section>
-      <div>
-        <div class="card" style="width: 18rem">
-          <img src="..." class="card-img-top" alt="..." />
-          <div class="card-body">
-            <h5>producto</h5>
-            <p class="card-text">
-              texto de plantilla para los productos. ⭐⭐⭐⭐⭐
-            </p>
-          </div>
+<!-- ...existing code... -->
+<!-- inicio de productos -->
+<div class="container my-4">
+  <div class="row justify-content-center">
+    <div class="col-md-3 mb-3">
+      <div class="card" style="width: 18rem">
+        <img src="img/podadora.jpg" class="card-img-top" alt="..." />
+        <div class="card-body">
+          <h5>podadora</h5>
+          <p class="card-text">
+            Podadora potente, con cuchillas incluidas. <br>⭐⭐⭐⭐⭐
+          </p>
         </div>
       </div>
-    </section>
+    </div>
+    <div class="col-md-3 mb-3">
+      <div class="card" style="width: 18rem">
+        <img src="img/carretilla.jpg" class="card-img-top" alt="..." />
+        <div class="card-body">
+          <h5>producto</h5>
+          <p class="card-text">
+            Carretilla, con ruedas de repuesto incluidas. Facil agarre y transporte. <br>⭐⭐⭐⭐⭐
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3 mb-3">
+      <div class="card" style="width: 18rem">
+        <img src="..." class="card-img-top" alt="..." />
+        <div class="card-body">
+          <h5>producto</h5>
+          <p class="card-text">
+            texto de plantilla para los productos. <br>⭐⭐⭐⭐⭐
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3 mb-3">
+      <div class="card" style="width: 18rem">
+        <img src="..." class="card-img-top" alt="..." />
+        <div class="card-body">
+          <h5>producto</h5>
+          <p class="card-text">
+            texto de plantilla para los productos. <br>⭐⭐⭐⭐⭐
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- fin de productos -->
+<!-- ...existing code... -->
     <!-- fin de productos -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
