--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
   </head>
   <body>
     <!-- Barra de navegacion -->
@@ -28,6 +32,7 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
+
         <div
           class="offcanvas offcanvas-end text-bg-success"
           tabindex="-1"
@@ -36,54 +41,116 @@
         >
           <div class="offcanvas-header">
             <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">
-              Dark offcanvas
+              Menú Principal
             </h5>
             <button
               type="button"
               class="btn-close btn-close-white"
               data-bs-dismiss="offcanvas"
-              aria-label="Close"
+              aria-label="Cerrar"
             ></button>
           </div>
+
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="#empresa"
+                  >Info de la empresa</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="#informacion"
+                  >Información sobre el sector agrícola</a
+                >
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#productos">Productos</a>
+              </li>
+
               <li class="nav-item dropdown">
                 <a
                   class="nav-link dropdown-toggle"
                   href="#"
+                  id="userDropdown"
                   role="button"
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
                 >
-                  Dropdown
+                  Cuenta
                 </a>
-                <ul class="dropdown-menu dropdown-menu-dark">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                <ul
+                  class="dropdown-menu dropdown-menu-end p-3"
+                  aria-labelledby="userDropdown"
+                  style="min-width: 300px"
+                >
                   <li>
-                    <hr class="dropdown-divider" />
+                    <!-- Formulario de inicio de sesión -->
+                    <form>
+                      <h6 class="dropdown-header">Iniciar Sesión</h6>
+                      <div class="mb-2">
+                        <input
+                          type="email"
+                          class="form-control"
+                          placeholder="Correo"
+                          required
+                        />
+                      </div>
+                      <div class="mb-2">
+                        <input
+                          type="password"
+                          class="form-control"
+                          placeholder="Contraseña"
+                          required
+                        />
+                      </div>
+                      <button type="submit" class="btn btn-success w-100 mb-2">
+                        Entrar
+                      </button>
+                    </form>
                   </li>
+                  <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a class="dropdown-item" href="#">Something else here</a>
+                    <!-- Formulario de registro -->
+                    <form>
+                      <h5 class="dropdown-header">Registrarse</h5>
+                      <div class="mb-2">
+                        <input
+                          type="text"
+                          class="form-control"
+                          placeholder="Nombre"
+                          required
+                        />
+                      </div>
+                      <div class="mb-2">
+                        <input
+                          type="email"
+                          class="form-control"
+                          placeholder="Correo"
+                          required
+                        />
+                      </div>
+                      <div class="mb-2">
+                        <input
+                          type="password"
+                          class="form-control"
+                          placeholder="Contraseña"
+                          required
+                        />
+                      </div>
+                      <button
+                        type="submit"
+                        class="btn btn-outline-success w-100"
+                      >
+                        Registrarse
+                      </button>
+                    </form>
                   </li>
                 </ul>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#ver_video">ver video</a>
+              </li>
             </ul>
-            <form class="d-flex mt-3" role="search">
-              <input
-                class="form-control me-2"
-                type="search"
-                placeholder="Search"
-                aria-label="Search"
-              />
-              <button class="btn btn-success" type="submit">Search</button>
-            </form>
           </div>
         </div>
       </div>
@@ -175,7 +242,7 @@
     <!-- fin Carrusel -->
 
     <!-- tarjetas de sobre la empresa -->
-    <div class="d-flex justify-content-center my-4">
+    <div class="d-flex justify-content-center my-4" id="empresa">
       <div class="card mb-3 tarjeta_color" style="max-width: 540px">
         <div class="row g-0">
           <div class="col-md-4 d-flex align-items-stretch">
@@ -205,60 +272,172 @@
     </div>
     <!-- fin de tarjetas de la empresa -->
 
+    <!-- inicio de textos informativos sobre la agricultura -->
+    <div class="card" id="informacion">
+      <div class="card-body">
+        <h5 class="card-title">
+          <span>
+            El Sector Agrícola: Motor del Crecimiento y la Oportunidad Comercial
+          </span>
+        </h5>
+        <p class="card-text">
+          La agricultura es mucho más que la producción de alimentos; es un
+          sector estratégico que impulsa el desarrollo económico, genera empleo
+          y abre nuevas oportunidades de negocio. En un mundo que demanda cada
+          vez más productos frescos, sostenibles y de calidad, el sector
+          agrícola se posiciona como una de las industrias con mayor potencial
+          de crecimiento e innovación. <br />
+          <br />
+
+          Desde la siembra hasta la comercialización, la cadena agrícola ofrece
+          un amplio abanico de posibilidades para emprendedores, inversionistas
+          y empresas que buscan generar impacto y rentabilidad. La modernización
+          del campo, el uso de tecnología, el acceso a nuevos mercados y la
+          transformación de productos agrícolas en bienes de alto valor añadido
+          son claves para dinamizar la economía rural y conectar la producción
+          con las necesidades del mercado. <br />
+          <br />
+
+          Invertir en el sector agrícola es apostar por un negocio con raíces
+          profundas y proyección global. Es fortalecer el campo, crear alianzas
+          sostenibles y aprovechar las ventajas de un mercado en constante
+          evolución.
+        </p>
+      </div>
+    </div>
+
+    <br />
+    <!-- fin del texto -->
+
     <!-- inicio de productos -->
-<!-- ...existing code... -->
-<!-- inicio de productos -->
-<div class="container my-4">
-  <div class="row justify-content-center">
-    <div class="col-md-3 mb-3">
-      <div class="card" style="width: 18rem">
-        <img src="img/podadora.jpg" class="card-img-top" alt="..." />
-        <div class="card-body">
-          <h5>podadora</h5>
-          <p class="card-text">
-            Podadora potente, con cuchillas incluidas. <br>⭐⭐⭐⭐⭐
-          </p>
+    <div class="container my-4" id="productos">
+      <div class="row justify-content-center">
+        <div class="col-md-3 mb-3">
+          <div class="card tarjeta_productos" style="width: 18rem">
+            <img
+              src="img/podadora.jpg"
+              class="card-img-top card_imagen"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5>Podadora</h5>
+              <p class="card-text">
+                Podadora potente, con cuchillas incluidas. <br />
+                <span class="fs-5">&#9733;&#9733;&#9733;&#9734;</span>
+                <span class="text-muted small">(4.0)</span>
+              </p>
+              <button class="boton_comprar">Comprar</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 mb-3">
+          <div class="card tarjeta_productos" style="width: 18rem">
+            <img
+              src="img/carretilla.webp"
+              class="card-img-top card_imagen"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5>Carretilla</h5>
+              <p class="card-text">
+                Carretilla, con ruedas de repuesto incluidas. Facil agarre y
+                transporte. <br />
+                <span class="fs-5">&#9733;&#9733;&#9733;&#9734;</span>
+                <span class="text-muted small">(4.0)</span>
+              </p>
+              <button class="boton_comprar">Comprar</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 mb-3">
+          <div class="card tarjeta_productos" style="width: 18rem">
+            <img
+              src="img/horca.webp"
+              class="card-img-top card_imagen"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5>Horca</h5>
+              <p class="card-text">
+                Horca, util para manipular grandes cantidades de material.
+                <br />
+                <span class="fs-5">&#9733;&#9733;&#9733;&#9734;</span>
+                <span class="text-muted small">(4.0)</span>
+              </p>
+              <button class="boton_comprar">Comprar</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 mb-3">
+          <div class="card tarjeta_productos" style="width: 18rem">
+            <img
+              src="img/tijera.png"
+              class="card-img-top card_imagen"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5>Tijera de cortar cesped</h5>
+              <p class="card-text">
+                Tijera cortadorad de cesped, incluye afiladora. <br />
+                <span class="fs-5">&#9733;&#9733;&#9733;&#9734;</span>
+                <span class="text-muted small">(4.0)</span>
+              </p>
+              <button class="boton_comprar">Comprar</button>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-    <div class="col-md-3 mb-3">
-      <div class="card" style="width: 18rem">
-        <img src="img/carretilla.jpg" class="card-img-top" alt="..." />
-        <div class="card-body">
-          <h5>producto</h5>
-          <p class="card-text">
-            Carretilla, con ruedas de repuesto incluidas. Facil agarre y transporte. <br>⭐⭐⭐⭐⭐
-          </p>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-3 mb-3">
-      <div class="card" style="width: 18rem">
-        <img src="..." class="card-img-top" alt="..." />
-        <div class="card-body">
-          <h5>producto</h5>
-          <p class="card-text">
-            texto de plantilla para los productos. <br>⭐⭐⭐⭐⭐
-          </p>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-3 mb-3">
-      <div class="card" style="width: 18rem">
-        <img src="..." class="card-img-top" alt="..." />
-        <div class="card-body">
-          <h5>producto</h5>
-          <p class="card-text">
-            texto de plantilla para los productos. <br>⭐⭐⭐⭐⭐
-          </p>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- fin de productos -->
-<!-- ...existing code... -->
     <!-- fin de productos -->
+
+    <!-- inicio de video -->
+    <div class="d-flex justify-content-center my-4" id="ver_video">
+      <div class="ratio ratio-16x9" style="max-width: 560px; width: 100%">
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/-UW2cuYflv8?si=5AEXkhHhfP-iPyys"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+      </div>
+    </div>
+    <!-- fin del video -->
+
+    <!-- inicio del footer -->
+    <footer class="bg-dark text-white py-4 mt-5">
+      <div class="container text-center">
+        <p class="mb-2">Síguenos en nuestras redes sociales</p>
+        <a
+          href="https://facebook.com"
+          target="_blank"
+          class="text-white mx-2 fs-3"
+        >
+          <i class="bi bi-facebook"></i>
+        </a>
+        <a
+          href="https://wa.me/1234567890"
+          target="_blank"
+          class="text-white mx-2 fs-3"
+        >
+          <i class="bi bi-whatsapp"></i>
+        </a>
+        <a
+          href="https://instagram.com"
+          target="_blank"
+          class="text-white mx-2 fs-3"
+        >
+          <i class="bi bi-instagram"></i>
+        </a>
+        <p class="mt-3 mb-0 small">
+          &copy; 2025-Hecho por: George Helmut Garcia Caro
+        </p>
+      </div>
+    </footer>
+    <!-- fin del footer -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
