corregimiento de error
cuando las tarjetas se agrandaban no se veian

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
     <!-- inicio de productos -->
     <div class="container my-4" id="productos">
       <div class="row justify-content-center">
-        <div class="col-md-3 mb-3">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-3">
           <div class="card tarjeta_productos" style="width: 18rem">
             <img
               src="img/podadora.jpg"
@@ -330,7 +330,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3 mb-3">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-3">
           <div class="card tarjeta_productos" style="width: 18rem">
             <img
               src="img/carretilla.webp"
@@ -349,7 +349,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3 mb-3">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-3">
           <div class="card tarjeta_productos" style="width: 18rem">
             <img
               src="img/horca.webp"
@@ -368,7 +368,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3 mb-3">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-3">
           <div class="card tarjeta_productos" style="width: 18rem">
             <img
               src="img/tijera.png"
