--- a/index.html
+++ b/index.html
@@ -413,6 +413,10 @@
     </div>
     <!-- fin del video -->
 
+    <!-- boton de scroll hacia arriba -->
+     <button id="scrollToTopBtn" class="btn boton_subir">↑</button>
+    <!-- fin del boton scroll -->
+ 
     <!-- inicio del footer -->
     <footer class="bg-dark text-white py-4 mt-5">
       <div class="container text-center">
