correccion del boton de subir

--- a/index.html
+++ b/index.html
@@ -414,7 +414,9 @@
     <!-- fin del video -->
 
     <!-- boton de scroll hacia arriba -->
-     <button id="scrollToTopBtn" class="btn boton_subir">↑</button>
+    <button id="scrollToTopBtn" class="btn btn-primary boton_subir">
+        <i class="bi bi-arrow-up fs-3"></i>
+    </button>
     <!-- fin del boton scroll -->
  
     <!-- inicio del footer -->
